Sidebar wrap fix

--- a/src/stories/Molecules/SidebarList/SidebarList.css
+++ b/src/stories/Molecules/SidebarList/SidebarList.css
@@ -55,6 +55,7 @@
   font-style: italic;
   font-size: var(--s0);
   font-weight: 400;
+  word-break: break-word;
 }
 
 .sidebar-list--default .sidebar-list__item__links {
